# brogpt

./: bun.lockb  index.html  package.json
backend/: README.md  pyproject.toml
backend/chat/: pyproject.toml
backend/src/: main.py
backend/user/: Cargo.toml
backend/user/src/: main.rs
backend/user/src/components/: database.rs  mod.rs
backend/user/src/handlers/: health.rs  mod.rs  signup.rs
backend/user/src/models/: user.rs
dynamodb/: package.json
frontend/: README.md  bun.lockb  package.json
frontend/src/: App.tsx  Chat.tsx  Login.tsx  index.css  main.tsx
frontend/src/components/: Grail.tsx
frontend/src/context/: user.tsx
frontend/src/utils/: llama.ts
src/: App.tsx  Chat.tsx  index.css  main.tsx
src/components/: Grail.tsx  Input.tsx  Messages.tsx
src/constants/: role.ts
