[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Aditya Banerjee <aditya_banerjee@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
llamaapi = "^0.1.36"
python-dotenv = "^1.0.1"
flask-cors = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
