[package]
name = "user"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
aws-sdk-dynamodb = "1.28.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
dotenv = "0.15.0"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
uuid = "1.8.0"
